syntax = "proto3";

option go_package = ".;recurringpb";

package entity;

import "google/protobuf/timestamp.proto";

message SavedCard {
  // @inject_tag: json:"id"
  string id = 1;
  string token = 2;
  string project_id = 3;
  string merchant_id = 4;
  // @inject_tag: json:"pan"
  string masked_pan = 5;
  string card_holder = 6;
  // @inject_tag: json:"expire"
  CardExpire expire = 7;
  string recurring_id = 8;
  bool is_active = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message CardExpire {
  // @inject_tag: json:"month"
  string month = 1;
  // @inject_tag: json:"year"
  string year = 2;
}

message Subscription {
  // @inject_tag: json:"id"
  string id = 1;
  // @inject_tag: json:"-"
  string customer_id = 2;
  // @inject_tag: json:"customer_id"
  string customer_uuid = 3;
  string period = 4;
  string merchant_id = 5;
  string project_id = 6;
  double amount = 7;
  string currency = 8;
  string item_type = 9;
  repeated string item_list = 10;
  bool is_active = 11;
  string masked_pan = 12;
  // @inject_tag: json:"-"
  string cardpay_plan_id = 13;
  // @inject_tag: json:"-"
  string cardpay_subscription_id = 14;
  CustomerInfo customer_info = 15;
  google.protobuf.Timestamp expire_at = 16;
  google.protobuf.Timestamp last_payment_at = 17;
  google.protobuf.Timestamp created_at = 18;
  google.protobuf.Timestamp updated_at = 19;
  // @inject_tag: json:"-"
  string order_id = 20;
  map<string, string> project_name = 21;
  double total_amount = 22;
}

message CustomerInfo {
    string external_id = 1;
    string email = 2;
    string phone = 3;
}